--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <span>M</span>
         <span>A</span>
         <span>R</span>
+        <span>I</span>
         <span>B</span>
         <span>E</span>
         <span>L</span>
